<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_edit_gig"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:splitMotionEvents="true" >

    <TextView
        android:id="@+id/heading_edit_gig"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/edit_gig"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2" >

        <TextView
            android:id="@+id/gig_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="0"
            android:text="@string/gig_date"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <DatePicker
            android:id="@+id/gig_date_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="left|top"
            android:layout_row="0" />

        <TextView
            android:id="@+id/gig_location_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="1"
            android:text="@string/gig_location"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/gig_location_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="left|top"
            android:layout_row="1" />

        <TextView
            android:id="@+id/gig_issue_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="2"
            android:text="@string/gig_issue"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/gig_issue_content"
            android:layout_column="1"
            android:layout_gravity="left|top"
            android:layout_row="2"
            android:ems="10"
            android:hint=""
            android:inputType="text" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/gig_invoice_required_label"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="3"
            android:text="@string/gig_invoice_required"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <CheckBox
            android:id="@+id/gig_invoice_required_content"
            android:layout_column="1"
            android:layout_gravity="left|top"
            android:layout_row="3"
            android:text="" />

        <TextView
            android:id="@+id/gig_bill_met_label"
            android:layout_width="69dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="4"
            android:text="@string/gig_bill_met"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <CheckBox
            android:id="@+id/gig_bill_met_content"
            android:layout_column="1"
            android:layout_gravity="left|top"
            android:layout_row="4"
            android:text="" />
    </GridLayout>

</LinearLayout>